force-app/main/default/objects/sugati__Price_Override__c/sugati__Price_Override__c.object-meta.xml
<CustomObject>
    <label>Price Override</label>
    <nameField>
        <displayFormat>PO-{0000000}</displayFormat>
        <label>Price Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>