force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Based_On_How_Many_Sharing__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Based_On_How_Many_Sharing__c</fullName>
    <description>How many sharing is this price override based on?</description>
    <inlineHelpText>How many sharing is this price override based on?</inlineHelpText>
    <label>Based On How Many Sharing?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>