force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Currency_Code__c</fullName>
    <description>Just for displaying on the detail page, since CurrencyIsoCode is not displayed.</description>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Code</label>
    <type>Text</type>
</CustomField>