force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>