force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Earlybird_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Earlybird_Discount__c</fullName>
    <label>Earlybird Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>