force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Price Overrides</relationshipLabel>
    <relationshipName>Price_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>