force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Is_Default_For_Segment__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Is_Default_For_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default For Segment</label>
    <type>Checkbox</type>
</CustomField>