force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Is_Traveller_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Is_Traveller_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Traveller Type</label>
    <type>Checkbox</type>
</CustomField>