force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Linked_Services_Extra_Item__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Linked_Services_Extra_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Services &amp; Extra Item</label>
    <referenceTo>sugati__Linked_Services_Extra_Item__c</referenceTo>
    <relationshipLabel>Price Overrides</relationshipLabel>
    <relationshipName>Price_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>