force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Max_Sell_Per_Tour__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Max_Sell_Per_Tour__c</fullName>
    <label>Max Sell Per Tour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>