force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Price Overrides</relationshipLabel>
    <relationshipName>Price_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>