force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which room type is this price override based on?</description>
    <inlineHelpText>Which room type is this price override based on?</inlineHelpText>
    <label>Room Type</label>
    <referenceTo>sugati__Room_Type__c</referenceTo>
    <relationshipLabel>Price Overrides</relationshipLabel>
    <relationshipName>Price_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>