force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Room_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Room_Type_Name__c</fullName>
    <formula>sugati__S_PO_Room_Type__r.sugati__RT_Name__c</formula>
    <label>Room Type Name</label>
    <type>Text</type>
</CustomField>