force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Room_Type_Sleeps__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Room_Type_Sleeps__c</fullName>
    <formula>sugati__S_PO_Room_Type__r.sugati__RT_Sleep_Comfortable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Type Sleeps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>