force-app/main/default/objects/sugati__Price_Override__c/fields/sugati__S_PO_Traveller_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PO_Traveller_Type_Name__c</fullName>
    <label>Traveller Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>